--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:44:35 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:45:18 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,9 +141,9 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-20</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
+      <td class="bigbold">-21</td>
+      <td>Scottie Scheffler -11
+-3 thru 8</td>
       <td>Cameron Smith(W) -5
 -3 thru 10</td>
       <td>Corey Conners -3
@@ -157,9 +157,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-19</td>
-      <td>Scottie Scheffler(W) -10
--2 thru 7</td>
+      <td class="bigbold">-20</td>
+      <td>Scottie Scheffler(W) -11
+-3 thru 8</td>
       <td>Cameron Smith -5
 -3 thru 10</td>
       <td>Will Zalatoris -2
@@ -173,9 +173,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-19</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
+      <td class="bigbold">-20</td>
+      <td>Scottie Scheffler -11
+-3 thru 8</td>
       <td>Shane Lowry -5
 -2 thru 8</td>
       <td>Corey Conners -3
@@ -189,9 +189,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-18</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
+      <td class="bigbold">-19</td>
+      <td>Scottie Scheffler -11
+-3 thru 8</td>
       <td>Shane Lowry -5
 -2 thru 8</td>
       <td>Will Zalatoris -2
@@ -205,9 +205,9 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-18</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
+      <td class="bigbold">-19</td>
+      <td>Scottie Scheffler -11
+-3 thru 8</td>
       <td>Cameron Smith -5
 -3 thru 10</td>
       <td>Corey Conners -3
@@ -221,9 +221,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-17</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
+      <td class="bigbold">-18</td>
+      <td>Scottie Scheffler -11
+-3 thru 8</td>
       <td>Cameron Smith(W) -5
 -3 thru 10</td>
       <td>Shane Lowry -5
@@ -237,9 +237,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-15</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
+      <td class="bigbold">-16</td>
+      <td>Scottie Scheffler -11
+-3 thru 8</td>
       <td>Cameron Smith -5
 -3 thru 10</td>
       <td>Corey Conners -3
@@ -253,9 +253,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
-      <td class="bigbold">-15</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
+      <td class="bigbold">-16</td>
+      <td>Scottie Scheffler -11
+-3 thru 8</td>
       <td>Cameron Smith(W) -5
 -3 thru 10</td>
       <td>Corey Conners -3
@@ -269,17 +269,17 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-14</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
+      <td class="bigbold">-15</td>
+      <td>Scottie Scheffler -11
+-3 thru 8</td>
       <td>Corey Conners -3
 -2 thru 10</td>
       <td>Will Zalatoris -2
 -1 thru 11</td>
       <td>Webb Simpson +1
 E thru 14</td>
-      <td class="greyout leftborder">Jon Rahm(W) +8
-+6 thru 17</td>
+      <td class="greyout leftborder">Jon Rahm(W) +7
++5 (F)</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -312,8 +312,8 @@ Missed Cut</td>
 +3 thru 9</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout">Jon Rahm +8
-+6 thru 17</td>
+      <td class="greyout">Jon Rahm +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -333,15 +333,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-9</td>
-      <td>Scottie Scheffler(W) -10
--2 thru 7</td>
+      <td class="bigbold">-11</td>
+      <td>Scottie Scheffler(W) -11
+-3 thru 8</td>
       <td>Corey Conners -3
 -2 thru 10</td>
       <td>Will Zalatoris -2
 -1 thru 11</td>
-      <td>Jon Rahm +8
-+6 thru 17</td>
+      <td>Jon Rahm +7
++5 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -349,9 +349,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-9</td>
-      <td>Scottie Scheffler(W) -10
--2 thru 7</td>
+      <td class="bigbold">-10</td>
+      <td>Scottie Scheffler(W) -11
+-3 thru 8</td>
       <td>Corey Conners -3
 -2 thru 10</td>
       <td>Rory McIlroy +1
@@ -360,8 +360,8 @@ Missed Cut</td>
 +4 thru 14</td>
       <td class="greyout leftborder">Robert MacIntyre +6
 +4 thru 16</td>
-      <td class="greyout">Jon Rahm +8
-+6 thru 17</td>
+      <td class="greyout">Jon Rahm +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -376,6 +376,22 @@ E thru 12</td>
 +3 thru 9</td>
       <td class="greyout leftborder">Marc Leishman +3
 -1 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler -11
+-3 thru 8</td>
+      <td>Justin Thomas(W) -1
+E thru 12</td>
+      <td>Rory McIlroy +1
+-1 (F)</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 14</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -396,18 +412,18 @@ E thru 12</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
-      <td>Justin Thomas(W) -1
-E thru 12</td>
-      <td>Rory McIlroy +1
--1 (F)</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +5
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler -11
+-3 thru 8</td>
+      <td>Cameron Smith(W) -5
+-3 thru 10</td>
+      <td>Matthew Fitzpatrick +3
++3 thru 14</td>
+      <td>Patrick Cantlay +5
 +4 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -424,23 +440,23 @@ Missed Cut</td>
 -1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +5
 +4 thru 14</td>
-      <td class="greyout">Jon Rahm(W) +8
-+6 thru 17</td>
+      <td class="greyout">Jon Rahm(W) +7
++5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
-      <td>Cameron Smith(W) -5
--3 thru 10</td>
-      <td>Matthew Fitzpatrick +3
-+3 thru 14</td>
-      <td>Patrick Cantlay +5
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -11
+-3 thru 8</td>
+      <td>Corey Conners -3
+-2 thru 10</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Patrick Cantlay(W) +5
 +4 thru 14</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
+      <td class="greyout leftborder">Jon Rahm +7
++5 (F)</td>
+      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -460,22 +476,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
-      <td>Corey Conners -3
--2 thru 10</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Patrick Cantlay(W) +5
-+4 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+6 thru 17</td>
-      <td class="greyout">Sam Burns
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-5</td>
       <td>Corey Conners -3
@@ -486,8 +486,8 @@ Missed Cut</td>
 E thru 12</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+6 thru 17</td>
+      <td class="greyout leftborder">Jon Rahm +7
++5 (F)</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -502,8 +502,8 @@ Missed Cut</td>
 +3 thru 9</td>
       <td>Talor Gooch +3
 +1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm(W) +8
-+6 thru 17</td>
+      <td class="greyout leftborder">Jon Rahm(W) +7
++5 (F)</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -521,6 +521,22 @@ E thru 12</td>
       <td class="greyout leftborder">Tiger Woods +3
 +2 thru 15</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -5
+-3 thru 10</td>
+      <td>Corey Conners(W) -3
+-2 thru 10</td>
+      <td>Will Zalatoris -2
+-1 thru 11</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -572,26 +588,10 @@ E thru 12</td>
 -1 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -5
--3 thru 10</td>
-      <td>Corey Conners(W) -3
--2 thru 10</td>
-      <td>Will Zalatoris -2
--1 thru 11</td>
-      <td>Jon Rahm +8
-+6 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler(W) -10
--2 thru 7</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler(W) -11
+-3 thru 8</td>
       <td>Cameron Smith -5
 -3 thru 10</td>
       <td>Patrick Cantlay +5
@@ -620,6 +620,38 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler -11
+-3 thru 8</td>
+      <td>Rory McIlroy +1
+-1 (F)</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Jon Rahm(W) +7
++5 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">2</td>
+      <td>Cameron Smith -5
+-3 thru 10</td>
+      <td>Corey Conners -3
+-2 thru 10</td>
+      <td>Tiger Woods +3
++2 thru 15</td>
+      <td>Jon Rahm(W) +7
++5 (F)</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">2</td>
       <td>Collin Morikawa(W) -1
@@ -633,38 +665,6 @@ E thru 12</td>
       <td class="greyout leftborder">Tiger Woods +3
 +2 thru 15</td>
       <td class="greyout">Gary Woodland
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">2</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
-      <td>Rory McIlroy +1
--1 (F)</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm(W) +8
-+6 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">3</td>
-      <td>Cameron Smith -5
--3 thru 10</td>
-      <td>Corey Conners -3
--2 thru 10</td>
-      <td>Tiger Woods +3
-+2 thru 15</td>
-      <td>Jon Rahm(W) +8
-+6 thru 17</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -684,6 +684,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">4</td>
+      <td>Corey Conners -3
+-2 thru 10</td>
+      <td>Justin Thomas -1
+E thru 12</td>
+      <td>Rory McIlroy +1
+-1 (F)</td>
+      <td>Jon Rahm(W) +7
++5 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">5</td>
       <td>Will Zalatoris -2
@@ -694,25 +710,9 @@ E thru 11</td>
 -1 (F)</td>
       <td>Patrick Cantlay +5
 +4 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+6 thru 17</td>
+      <td class="greyout leftborder">Jon Rahm +7
++5 (F)</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">5</td>
-      <td>Corey Conners -3
--2 thru 10</td>
-      <td>Justin Thomas -1
-E thru 12</td>
-      <td>Rory McIlroy +1
--1 (F)</td>
-      <td>Jon Rahm(W) +8
-+6 thru 17</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -724,24 +724,24 @@ Missed Cut</td>
 -1 (F)</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Bubba Watson +7
-+5 thru 16</td>
-      <td class="greyout leftborder">Jon Rahm(W) +8
-+6 thru 17</td>
+      <td>Jon Rahm(W) +7
++5 (F)</td>
+      <td class="greyout leftborder">Bubba Watson +7
++5 thru 17</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Will Zalatoris -2
 -1 thru 11</td>
       <td>Justin Thomas(W) -1
 E thru 12</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Jon Rahm +8
-+6 thru 17</td>
+      <td>Jon Rahm +7
++5 (F)</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -749,18 +749,34 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Will Zalatoris -2
 -1 thru 11</td>
       <td>Justin Thomas -1
 E thru 12</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Jon Rahm(W) +8
-+6 thru 17</td>
+      <td>Jon Rahm(W) +7
++5 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">9</td>
+      <td>Scottie Scheffler -11
+-3 thru 8</td>
+      <td>Dustin Johnson +1
++3 thru 10</td>
+      <td>Patrick Cantlay +5
++4 thru 14</td>
+      <td>Adam Scott +12
++8 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka(W)
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -774,8 +790,8 @@ E thru 11</td>
 +4 thru 16</td>
       <td>Daniel Berger +7
 +5 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+6 thru 17</td>
+      <td class="greyout leftborder">Jon Rahm +7
++5 (F)</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -790,38 +806,22 @@ Missed Cut</td>
 -1 (F)</td>
       <td>Patrick Cantlay +5
 +4 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+6 thru 17</td>
+      <td class="greyout leftborder">Jon Rahm +7
++5 (F)</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">10</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
-      <td>Dustin Johnson +1
-+3 thru 10</td>
-      <td>Patrick Cantlay +5
-+4 thru 14</td>
-      <td>Adam Scott +12
-+8 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka(W)
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">11</td>
       <td>Collin Morikawa(W) -1
 E thru 11</td>
       <td>Hideki Matsuyama E
 +3 thru 9</td>
       <td>Patrick Cantlay +5
 +4 thru 14</td>
-      <td>Jon Rahm +8
-+6 thru 17</td>
+      <td>Jon Rahm +7
++5 (F)</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
       <td class="greyout">Jordan Spieth
@@ -829,15 +829,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">11</td>
       <td>Justin Thomas -1
 E thru 12</td>
       <td>Hideki Matsuyama E
 +3 thru 9</td>
       <td>Patrick Cantlay +5
 +4 thru 14</td>
-      <td>Jon Rahm(W) +8
-+6 thru 17</td>
+      <td>Jon Rahm(W) +7
++5 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -845,18 +845,34 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">12</td>
       <td>Justin Thomas -1
 E thru 12</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
       <td>Patrick Cantlay(W) +5
 +4 thru 14</td>
-      <td>Jon Rahm +8
-+6 thru 17</td>
+      <td>Jon Rahm +7
++5 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">13</td>
+      <td>Collin Morikawa -1
+E thru 11</td>
+      <td>Viktor Hovland(W) +3
+-1 (F)</td>
+      <td>Patrick Reed +4
++1 (F)</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -870,38 +886,22 @@ E thru 12</td>
 +4 thru 14</td>
       <td>Daniel Berger +7
 +5 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+6 thru 17</td>
+      <td class="greyout leftborder">Jon Rahm +7
++5 (F)</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">14</td>
-      <td>Collin Morikawa -1
-E thru 11</td>
-      <td>Viktor Hovland(W) +3
--1 (F)</td>
-      <td>Patrick Reed +4
-+1 (F)</td>
-      <td>Jon Rahm +8
-+6 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">16</td>
+      <td class="bigbold">15</td>
       <td>Collin Morikawa -1
 E thru 11</td>
       <td>Tony Finau +4
 +2 (F)</td>
       <td>Patrick Cantlay +5
 +4 thru 14</td>
-      <td>Jon Rahm(W) +8
-+6 thru 17</td>
+      <td>Jon Rahm(W) +7
++5 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -909,15 +909,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">19</td>
+      <td class="bigbold">18</td>
       <td>Dustin Johnson +1
 +3 thru 10</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +5
 +4 thru 14</td>
-      <td>Jon Rahm +8
-+6 thru 17</td>
+      <td>Jon Rahm +7
++5 (F)</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
