--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:44:35 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:45:18 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,9 +141,9 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-18</td>
-      <td>Scottie Scheffler -10
--2 thru 7</td>
+      <td class="bigbold">-19</td>
+      <td>Scottie Scheffler -11
+-3 thru 8</td>
       <td>Shane Lowry -5
 -2 thru 8</td>
       <td>Will Zalatoris -2
@@ -154,6 +154,22 @@ E thru 12</td>
 +2 (F)</td>
       <td class="greyout">Patrick Cantlay +5
 +4 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-13</td>
+      <td>Scottie Scheffler(W) -11
+-3 thru 8</td>
+      <td>Shane Lowry -5
+-2 thru 8</td>
+      <td>Will Zalatoris -2
+-1 thru 11</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -169,22 +185,6 @@ E thru 12</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +3
 +3 thru 14</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-11</td>
-      <td>Scottie Scheffler(W) -10
--2 thru 7</td>
-      <td>Shane Lowry -5
--2 thru 8</td>
-      <td>Will Zalatoris -2
--1 thru 11</td>
-      <td>Jon Rahm +8
-+6 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -214,8 +214,8 @@ Missed Cut</td>
 E thru 12</td>
       <td>Patrick Cantlay +5
 +4 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+6 thru 17</td>
+      <td class="greyout leftborder">Jon Rahm +7
++5 (F)</td>
       <td class="greyout">Tyrrell Hatton +9
 +7 (F)</td>
     </tr>
@@ -308,24 +308,24 @@ Missed Cut</td>
 E thru 11</td>
       <td>Robert MacIntyre +6
 +4 thru 16</td>
-      <td>Daniel Berger +7
+      <td>Jon Rahm +7
 +5 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +8
-+6 thru 17</td>
+      <td class="greyout leftborder">Daniel Berger +7
++5 (F)</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">14</td>
+      <td class="bigbold">13</td>
       <td>Collin Morikawa -1
 E thru 11</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Reed +4
 +1 (F)</td>
-      <td>Jon Rahm +8
-+6 thru 17</td>
+      <td>Jon Rahm +7
++5 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
@@ -333,15 +333,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">16</td>
+      <td class="bigbold">15</td>
       <td>Collin Morikawa -1
 E thru 11</td>
       <td>Tony Finau +4
 +2 (F)</td>
       <td>Patrick Cantlay +5
 +4 thru 14</td>
-      <td>Jon Rahm(W) +8
-+6 thru 17</td>
+      <td>Jon Rahm(W) +7
++5 (F)</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">19</td>
+      <td class="bigbold">18</td>
       <td>Dustin Johnson +1
 +3 thru 10</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +5
 +4 thru 14</td>
-      <td>Jon Rahm +8
-+6 thru 17</td>
+      <td>Jon Rahm +7
++5 (F)</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
